agencing files into appropriate folders

--- a/tps/tp2/TP2.html
+++ b/tps/tp2/TP2.html
@@ -1,5 +1,5 @@
 <html>
-    <head><title>titre de la page</title></head>
+    <head><title>formulaires</title></head>
     <body>
         <form action="">
             Pour rentrer une information :<input type="text" name="nom" size="40" maxlenght="35" value="Votre nom"></input>
@@ -14,7 +14,7 @@
                 <option>plus de 60 ans</option>
             </select>
         </form>
-        <! pour les attributs http://www.w3.org/TR/html4/interact/forms.html#edef-OPTION>
+        <!--pour les attributs http://www.w3.org/TR/html4/interact/forms.html#edef-OPTION-->
         <br><br>
         <form action="">
             Pour en laisser que deux :<br>
@@ -22,7 +22,7 @@
             <input type= "radio" name="sexe">féminin
         </form>
         <br><br>
-        <!http://www.w3.org/TR/html4/interact/forms.html#radio>
+        <!--http://www.w3.org/TR/html4/interact/forms.html#radio>-->
         <form action="">
             Pour laisser le choix d'en avoir plusieurs :<br>
             <input type="checkbox" name="nom0"> chocolat<br>
@@ -42,10 +42,10 @@
         <br><br>
         Bouton pour événement JS ou intéraction
         <form action="">
-            <button type="button" onClick="location.href=index1.html’">Aller à la page1
+            <button type="button" onClick="location.href=index1.html">Aller à la page1
             </button>
         </form>
-        <!http://www.w3.org/TR/html4/interact/forms.html#push-button>
+        <!--http://www.w3.org/TR/html4/interact/forms.html#push-button-->
         <br><br>
         Pour renseigner un fichier, super puissant et intéressant
         <form action="..." method="post" enctype="multipart/form-data">
