--- a/tps/tp3/tp3_5/tp3_5.html
+++ b/tps/tp3/tp3_5/tp3_5.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Nouveau, nouveau...</h2>
-    <p>Un concept de nouoveau est apparu dans l'univers de la publication Web, c'est celui des <span style="background-color:#99ccFF">feuilles de style CSS</span></p>
+    <!-- Creer un questionnaire qui demande l'age et le nom -->
+    <form action="">
+        <label for="nom">Nom</label>
+        <input type="text" name="nom" id="nom">
+        <label for="age">Age</label>
+        <input type="number" name="age" id="age">
+        <input type="submit" value="Envoyer">
 </body>
 </html>
